# misis-advanced-nlp

./: .gitignore  pyproject.toml
configs/: multilabel.json
custom_bert/: config.py  model.py  preprocessing.py  test_forward.py
encoder_multilabel/: config.py  const.py  dataset.py  export_onnx.py  inference.py  model.py  train.py
llm/: llm_offline.py  test_openai.py
logger/: aim_demo.py  tb_demo.py
retrieval/: const.py  dataset.py  loop.py  model.py  trainable.py  usage.py
